@@ -22,6 +22,7 @@
 - P4A_Error() global function was removed because unused
 - P4A now throws an exception when uploading forbidden files
 - P4A_EXTENDED_ERRORS was implemented for PHP errors
+- P4A_EXTENDED_ERRORS was implemented for exceptions
 
 2.99.5
 - a bug with invisible P4A_Table was solved
